# mylang

./: CMakeLists.txt
src/: ast.c  ast.h  parser.c  tokenizer.c  tokenizer.h
